5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1684_1100.log
== TEST (2019-04-28 23:09:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if(nota == 2 or nota == 5 or nota == 10 or nota == 20 or nota == 50 or nota == 100):

elif(nota == 2):
     print("Aninal: Tartaruga")
		
else:
	 print("Animal: Invalido")

-- ERROR:
File "XXXX", line 9
    elif(nota == 2):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:09:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if(nota == 2 or nota == 5 or nota == 10 or nota == 20 or nota == 50 or nota == 100):

   elif(nota == 2):
        print("Aninal: Tartaruga")
		
else:
	 print("Animal: Invalido")

-- ERROR:
File "XXXX", line 9
    elif(nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:09:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if(nota == 2 or nota == 5 or nota == 10 or nota == 20 or nota == 50 or nota == 100):

   elif(nota == 2)
        print("Aninal: Tartaruga")
		
else:
	 print("Animal: Invalido")

-- ERROR:
File "XXXX", line 9
    elif(nota == 2)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:12:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if   (nota == 2 or nota == 5 or nota == 10 or nota == 20 or nota == 50 or nota == 100):

elif(nota == 2):
        print("Aninal: Tartaruga")
	
else:
	 print("Animal: Invalido")

-- ERROR:
File "XXXX", line 9
    elif(nota == 2):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:13:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if   (nota == 2 or nota == 5 or nota == 10 or nota == 20 or nota == 50 or nota == 100):

     elif(nota == 2):
      print("Aninal: Tartaruga")
	
else:
	 print("Animal: Invalido")

-- ERROR:
File "XXXX", line 9
    elif(nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:21:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if   ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or nota == 50 or nota == 100):

     elif(nota == 2):
      print("Aninal: Tartaruga")
	
else:
	 print("Animal: Invalido")
/
-- ERROR:
File "XXXX", line 9
    elif(nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:22:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if   ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or nota == 50 or nota == 100):

     elif(nota == 2):
      print("Aninal: Tartaruga")
	
else:
	 print("Animal: Invalido")

-- ERROR:
File "XXXX", line 9
    elif(nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:22:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if   ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or nota == 50 or nota == 100):

     elif(nota == 2):
      print("Aninal: Tartaruga")
	
else:
	 print("Animal: Invalido")

-- ERROR:
File "XXXX", line 9
    elif(nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:22:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if   ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or nota == 50 or nota == 100):

     elif(nota == 2):
      print("Aninal: Tartaruga")
	
else:
	 print("Animal: Invalido")

-- ERROR:
File "XXXX", line 9
    elif(nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:22:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if   ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or nota == 50 or nota == 100):

     elif(nota == 2):
      print("Aninal: Tartaruga")
	
else:
	 print("Animal: Invalido")

-- ERROR:
File "XXXX", line 9
    elif(nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:22:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if   ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or nota == 50 or nota == 100):

     elif(nota == 2):
      print("Aninal: Tartaruga")
	
else:
	 print("Animal: Invalido")

-- ERROR:
File "XXXX", line 9
    elif(nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:22:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if   ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or nota == 50 or nota == 100):

     elif(nota == 2):
      print("Aninal: Tartaruga")
	
else:
	 print("Animal: Invalido")

-- ERROR:
File "XXXX", line 9
    elif(nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:26:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if   ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):

     elif(nota == 2):
      print("Aninal: Tartaruga")
	
else:
	 print("Animal: Invalido")

-- ERROR:
File "XXXX", line 9
    elif(nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:26:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):

    elif(nota == 2):
         print("Aninal: Tartaruga")
	
else:
	 print("Animal: Invalido")

-- ERROR:
File "XXXX", line 9
    elif(nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:26:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):

      elif(nota == 2):
         print("Aninal: Tartaruga")
	
else:
	 print("Animal: Invalido")

-- ERROR:
File "XXXX", line 9
    elif(nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:27:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):

      elif(nota == 2):
         print("Aninal: Tartaruga")
	
else:
	 print("Animal: Invalido")

-- ERROR:
File "XXXX", line 9
    elif(nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:27:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
   print(nota)

-- OUTPUT:
Entrada 100
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:28:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
   elif(nota == 2):
        print("Animal: Tartaruga")

-- ERROR:
File "XXXX", line 8
    elif(nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:29:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
    elif(nota == 2):
      print("Animal: Tartaruga")

-- ERROR:
File "XXXX", line 8
    elif(nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:29:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
   elif(nota == 2):
      print("Animal: Tartaruga")

-- ERROR:
File "XXXX", line 8
    elif(nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:29:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
   elif(nota == 2):
       print("Animal: Tartaruga")

-- ERROR:
File "XXXX", line 8
    elif(nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:30:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
    elif (nota == 2):
         print("Animal: Tartaruga")

-- ERROR:
File "XXXX", line 8
    elif (nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:30:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
    elif (nota == 2):
        

-- ERROR:
File "XXXX", line 8
    elif (nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:32:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
     elif(nota == 2):
          print("a")
-- ERROR:
File "XXXX", line 8
    elif(nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:32:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
     elif(nota == 2):
          print("a")
else:
	 print("invalido")
-- ERROR:
File "XXXX", line 8
    elif(nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:32:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
      elif(nota == 2):
          print("a")
else:
	 print("invalido")
-- ERROR:
File "XXXX", line 8
    elif(nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:32:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
      elif(nota == 2)
          print("a")
else:
	 print("invalido")
-- ERROR:
File "XXXX", line 8
    elif(nota == 2)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:32:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
     elif(nota == 2):
          print("a")
else:
	 print("invalido")
-- ERROR:
File "XXXX", line 8
    elif(nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:33:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
    elif(nota == 2):
          print("a")
else:
	 print("invalido")
-- ERROR:
File "XXXX", line 8
    elif(nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:33:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
   elif(nota == 2):
          print("a")
else:
	 print("invalido")
-- ERROR:
File "XXXX", line 8
    elif(nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:33:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
      if(nota == 2):
         print("a")
else:
	 print("invalido")
-- OUTPUT:
Entrada 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:34:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
      if(nota == 2):
         print("a")
else:
	  elif( nota == 5):
			print("b")
-- ERROR:
File "XXXX", line 11
    elif( nota == 5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:37:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
elif(nota == 2):
         print("a")
-- ERROR:
File "XXXX", line 8
    elif(nota == 2):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:38:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if   ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
   elif(nota == 2):
         print("a")
-- ERROR:
File "XXXX", line 8
    elif(nota == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:39:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if   ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
      print("Entrada", nota)
-- OUTPUT:
Entrada 100
Entrada 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:40:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if   ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
      print("Entrada", nota)
   elif(nota == 5):
		print("a")
-- ERROR:
File "XXXX", line 9
    elif(nota == 5):
                   ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:42:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if   (nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
      print("Entrada", nota)
   elif(nota == 5):
		print("a")
-- ERROR:
File "XXXX", line 7
    if   (nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
                                                                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:43:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if   (nota == 2 or nota == 5 or nota == 10 or nota == 20 or nota == 50 or nota == 100):
      print("Entrada", nota)
   elif(nota == 5):
		print("a")
-- ERROR:
File "XXXX", line 9
    elif(nota == 5):
                   ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:54:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if   (nota == 2 or nota == 5 or nota == 10 or nota == 20 or nota == 50 or nota == 100):

-- ERROR:
File "XXXX", line 8
    
                                                                                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:55:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if   (nota == 2 or nota == 5 or nota == 10 or nota == 20 or nota == 50 or nota == 100):
-- ERROR:
File "XXXX", line 8
    
                                                                                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:55:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  (nota == 2 or nota == 5 or nota == 10 or nota == 20 or nota == 50 or nota == 100):
-- ERROR:
File "XXXX", line 8
    
                                                                                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:56:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
-- ERROR:
File "XXXX", line 8
    
                                                                                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:56:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
     print(nota)
-- OUTPUT:
Entrada 100
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:57:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
     print(nota)
elif (nota == 2):
	print("a")
-- OUTPUT:
Entrada 100
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:59:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
elif (nota == 2):
	print("a")
-- ERROR:
File "XXXX", line 8
    elif (nota == 2):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:00:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))

if  ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
     print("Entrada", nota)
elif (nota == 2):
	print("a")
-- OUTPUT:
Entrada 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:00:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))

if  ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
     print("Entrada", nota)
      elif (nota == 2):
	         print("a")
-- ERROR:
File "XXXX", line 8
    elif (nota == 2):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:00:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))

if  ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
     print("Entrada", nota)
   elif (nota == 2):
	     print("a")
-- ERROR:
File "XXXX", line 8
    elif (nota == 2):
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:00:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))

if  ((nota == 2) or (nota == 5) or (nota == 10) or (nota == 20) or (nota == 50) or (nota == 100)):
     print("Entrada", nota)
elif (nota == 2):
	  print("a")
-- OUTPUT:
Entrada 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:03:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  ((nota == 2)):
     print("Animal: Tartaruga")
elif (nota == 5):
	  print("animal: Garça")
-- OUTPUT:
Entrada 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:03:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  ((nota == 2)):
     print("Animal: Tartaruga")
elif (nota == 5):
	  print("animal: Garça")
-- OUTPUT:
Entrada 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:08:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if (nota == 2):
   print("Animal: Tartaruga")
elif (nota == 5):
	  print("animal: Garça")
-- OUTPUT:
Entrada 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:10:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  ((nota == 2) and (nota == 5) and (nota == 10) and (nota == 20) and (nota == 50) and (nota == 100)):
     print("Entrada", nota)
      elif (nota == 2):
	       print("a")
-- ERROR:
File "XXXX", line 9
    elif (nota == 2):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:11:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if (nota == 2):
	print("a")
	
elif(nota == 5):
	 print("b")
     
-- OUTPUT:
Entrada 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:18:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if (nota == 2):
	print("Animal: Tartaruga")
	
elif(nota == 5):
	 print("Animal: Garça")
		
elif(nota == 10):
	 print("Animal: Arara")
		
elif(nota == 20):
	 print("Animal: Mico-leao-dourado")
		
elif(nota == 50):
	 print("Animal: Onca-pintada")
		
elif(nota == 100):
	 print("Animal: Garoupa")
		
else:
	 print("Animal: Invalido")
     
-- EXECUTION TIME:
0.213243
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Digite o valor da nota:Entrada 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:18:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if (nota == 2):
	print("Animal: Tartaruga")
	
elif(nota == 5):
	 print("Animal: Garça")
		
elif(nota == 10):
	 print("Animal: Arara")
		
elif(nota == 20):
	 print("Animal: Mico-leao-dourado")
		
elif(nota == 50):
	 print("Animal: Onca-pintada")
		
elif(nota == 100):
	 print("Animal: Garoupa")
		
else:
	 print("Animal: Invalido")
     
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:18:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if (nota == 2):
	print("Animal: Tartaruga")
	
elif(nota == 5):
	 print("Animal: Garça")
		
elif(nota == 10):
	 print("Animal: Arara")
		
elif(nota == 20):
	 print("Animal: Mico-leao-dourado")
		
elif(nota == 50):
	 print("Animal: Onca-pintada")
		
elif(nota == 100):
	 print("Animal: Garoupa")
		
else:
	 print("Animal: Invalido")
     
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:20:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if (nota == 2):
	print("Animal: Tartaruga")
	
elif(nota == 5):
	 print("Animal: Garça")
		
elif(nota == 10):
	 print("Animal: Arara")
		
elif(nota == 20):
	 print("Animal: Mico-leao-dourado")
		
elif(nota == 50):
	 print("Animal: Onca-pintada")
		
elif(nota == 100):
	 print("Animal: Garoupa")
		
else:
	print("Animal: Invalido")
     
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:20:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if (nota == 2):
	print("Animal: Tartaruga")
	
elif(nota == 5):
	 print("Animal: Garça")
		
elif(nota == 10):
	 print("Animal: Arara")
		
elif(nota == 20):
	 print("Animal: Mico-leao-dourado")
		
elif(nota == 50):
	 print("Animal: Onca-pintada")
		
elif(nota == 100):
	 print("Animal: Garoupa")
		
else:
	print("Animal: Invalido")
     
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:21:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  (nota == 2):
	 print("Animal: Tartaruga")
	
elif(nota == 5):
	 print("Animal: Garça")
		
elif(nota == 10):
	 print("Animal: Arara")
		
elif(nota == 20):
	 print("Animal: Mico-leao-dourado")
		
elif(nota == 50):
	 print("Animal: Onca-pintada")
		
elif(nota == 100):
	 print("Animal: Garoupa")
		
else:
	print("Animal: Invalido")
     
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:21:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  (nota == 2):
	 print("Animal: Tartaruga")
	
elif(nota == 5):
	 print("Animal: Garca")
		
elif(nota == 10):
	 print("Animal: Arara")
		
elif(nota == 20):
	 print("Animal: Mico-leao-dourado")
		
elif(nota == 50):
	 print("Animal: Onca-pintada")
		
elif(nota == 100):
	 print("Animal: Garoupa")
		
else:
	print("Animal: Invalido")
     
-- EXECUTION TIME:
0.150603
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:21:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  (nota == 2):
	 print("Animal: Tartaruga")
	
elif(nota == 5):
	 print("Animal: Garca")
		
elif(nota == 10):
	 print("Animal: Arara")
		
elif(nota == 20):
	 print("Animal: Mico-leao-dourado")
		
elif(nota == 50):
	 print("Animal: Onca-pintada")
		
elif(nota == 100):
	 print("Animal: Garoupa")
		
else:
	print("Animal: Invalido")
     
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:22:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  (nota == 2):
	 print("Animal: Tartaruga")
	
elif(nota == 5):
	 print("Animal: Garca")
		
elif(nota == 10):
	 print("Animal: Arara")
		
elif(nota == 20):
	 print("Animal: Mico-leao-dourado")
		
elif(nota == 50):
	 print("Animal: Onca-pintada")
		
elif(nota == 100):
	 print("Animal: Garoupa")
		
else:
	print("Animal: Invalido")
     
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:23:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  (nota == 2):
	 print("Animal: Tartaruga")
	
elif(nota == 5):
	 print("Animal: Garca")
		
elif(nota == 10):
	 print("Animal: Arara")
		
elif(nota == 20):
	 print("Animal: Mico-leao-dourado")
		
elif(nota == 50):
	 print("Animal: Onca-pintada")
		
elif(nota == 100):
	 print("Animal: Garoupa")
		
else:
	print("Animal: Invalido")
     
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:23:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  (nota == 2):
	 print("Animal: Tartaruga")
	
elif(nota == 5):
	 print("Animal: Garca")
		
elif(nota == 10):
	 print("Animal: Arara")
		
elif(nota == 20):
	 print("Animal: Mico-leao-dourado")
		
elif(nota == 50):
	 print("Animal: Onca-pintada")
		
elif(nota == 100):
	 print("Animal: Garoupa")
		
else:
	print("Animal: Invalido")
     
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:23:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  (nota == 2):
	 print("Animal: Tartaruga")
	
elif(nota == 5):
	 print("Animal: Garca")
		
elif(nota == 10):
	 print("Animal: Arara")
		
elif(nota == 20):
	 print("Animal: Mico-leao-dourado")
		
elif(nota == 50):
	 print("Animal: Onca-pintada")
		
elif(nota == 100):
	 print("Animal: Garoupa")
		
else:
	print("Animal: Invalido")
     
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:23:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  (nota == 2):
	 print("Animal: Tartaruga")
	
elif(nota == 5):
	 print("Animal: Garca")
		
elif(nota == 10):
	 print("Animal: Arara")
		
elif(nota == 20):
	 print("Animal: Mico-leao-dourado")
		
elif(nota == 50):
	 print("Animal: Onca-pintada")
		
elif(nota == 100):
	 print("Animal: Garoupa")
		
else:
	print("Animal: Invalido")
     
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:24:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  (nota == 2):
	 print("Animal: Tartaruga")
	
elif(nota == 5):
	 print("Animal: Garca")
		
elif(nota == 10):
	 print("Animal: Arara")
		
elif(nota == 20):
	 print("Animal: Mico-leao-dourado")
		
elif(nota == 50):
	 print("Animal: Onca-pintada")
		
elif(nota == 100):
	 print("Animal: Garoupa")
		
else:
	print("Animal: Invalido")
     
-- EXECUTION TIME:
0.207571
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:25:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  (nota == 2):
	 print("Animal: Tartaruga")
	
elif(nota == 5):
	 print("Animal: Garca")
		
elif(nota == 10):
	 print("Animal: Arara")
		
elif(nota == 20):
	 print("Animal: Mico_leao_dourado")
		
elif(nota == 50):
	 print("Animal: Onca_pintada")
		
elif(nota == 100):
	 print("Animal: Garoupa")
		
else:
	print("Animal: Invalido")
     
-- EXECUTION TIME:
0.15324
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: Onca_pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:25:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  (nota == 2):
	 print("Animal: Tartaruga")
	
elif(nota == 5):
	 print("Animal: Garca")
		
elif(nota == 10):
	 print("Animal: Arara")
		
elif(nota == 20):
	 print("Animal: Mico-leao-dourado")
		
elif(nota == 50):
	 print("Animal: Onca-pintada")
		
elif(nota == 100):
	 print("Animal: Garoupa")
		
else:
	print("Animal: Invalido")
     
-- EXECUTION TIME:
0.214454
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:28:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada",nota)

if  (nota == 2):
	 print("Animal: Tartaruga")
	
elif(nota == 5):
	 print("Animal: Garca")
		
elif(nota == 10):
	 print("Animal: Arara")
		
elif(nota == 20):
	 print("Animal: Mico-leao-dourado")
		
elif(nota == 50):
	 print("Animal: Onca-pintada")
		
elif(nota == 100):
	 print("Animal: Garoupa")
		
else:
	print("Animal: Invalido")
     
-- EXECUTION TIME:
0.128378
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:28:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada",nota)

if  (nota == 2):
	 print("Animal: Tartaruga")
	
elif(nota == 5):
	 print("Animal: Garca")
		
elif(nota == 10):
	 print("Animal: Arara")
		
elif(nota == 20):
	 print("Animal: Mico-leao-dourado")
		
elif(nota == 50):
	 print("Animal: Onca-pintada")
		
elif(nota == 100):
	 print("Animal: Garoupa")
		
else:
	print("Animal: Invalido")
     
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:36:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada",nota)

if  (nota == 2):
	 print("Animal: Tartaruga")
	
elif(nota == 5):
	 print("Animal: Garça")
		
elif(nota == 10):
	 print("Animal: Arara")
		
elif(nota == 20):
	 print("Animal: Mico-leao-dourado")
		
elif(nota == 50):
	 print("Animal: Onça-pintada")
		
elif(nota == 100):
	 print("Animal: Garoupa")
		
else:
	print("Animal: Invalido")
     
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:37:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  (nota == 2):
	 print("Animal: Tartaruga")
	
elif(nota == 5):
	 print("Animal: Garca")
		
elif(nota == 10):
	 print("Animal: Arara")
		
elif(nota == 20):
	 print("Animal: Mico-leao-dourado")
		
elif(nota == 50):
	 print("Animal: Onca-pintada")
		
elif(nota == 100):
	 print("Animal: Garoupa")
		
else:
	print("Animal: Invalido")
     
-- EXECUTION TIME:
0.251335
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:46:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
nota = int(input("Digite o valor da nota:"))
print("Entrada", nota)

if  (nota == 2):
	 print("Animal: Tartaruga")
		
elif(nota == 5):
	 print("Animal: Garca")
		
elif(nota == 10):
	 print("Animal: Arara")
		
elif(nota == 20):
	 print("Animal: Mico-leao-dourado")
		
elif(nota == 50):
	 print("Animal: Onca-pintada")
		
elif(nota == 100):
	 print("Animal: Garoupa")
		
else:
	print("Animal: Invalido")
     
-- EXECUTION TIME:
0.193233
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
